--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="fi">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Maskun Kauppakeskus</title>
+
+  <title>Maskun Kauppakeskus – Varsinais-Suomen juurilla | Liikkeet, palvelut & aukioloajat</title>
+  <meta name="description" content="Maskun Kauppakeskus on paikallinen kohtaamispaikka Varsinais-Suomessa. Tutustu liikkeisiin, palveluihin ja aukioloaikoihin – Maskun sydämessä, vahvoilla juurilla.">
+  <meta name="robots" content="index,follow">
+  <meta name="theme-color" content="#0b6b4b">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fi_FI">
+  <meta property="og:title" content="Maskun Kauppakeskus – Varsinais-Suomen juurilla">
+  <meta property="og:description" content="Paikallinen kauppakeskus Maskussa, Varsinais-Suomessa. Liikkeet, palvelut ja tapahtumat – tervetuloa!">
+  <meta property="og:url" content="https://maskunkauppakeskus.fi/">
+  <meta property="og:image" content="https://maskunkauppakeskus.fi/assets/og-image.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Maskun Kauppakeskus – Varsinais-Suomen juurilla">
+  <meta name="twitter:description" content="Tutustu Maskun Kauppakeskukseen: liikkeet, palvelut ja aukioloajat Maskun kunnassa.">
+  <meta name="twitter:image" content="https://maskunkauppakeskus.fi/assets/og-image.jpg">
+
+  <link rel="canonical" href="https://maskunkauppakeskus.fi/">
+  <link rel="icon" href="./assets/favicon.ico">
+  <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png">
+
+  <!-- Preload hero banner (valinnainen) -->
+  <link rel="preload" as="image" href="./assets/banner1.svg" imagesrcset="./assets/banner1.svg" imagesizes="100vw">
+
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -14,28 +39,59 @@
 
   <header id="site-header" data-partial="./partials/header.html"></header>
 
-
-
-
   <main>
     <section class="hero">
       <div class="hero-container">
         <h1>Tervetuloa Maskun Kauppakeskukseen!</h1>
+        <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
+          vahvat juuret samassa osoitteessa.</p>
+        <nav class="quick-nav" aria-label="Pikavalikko">
+          <a class="btn" href="#meista">Tietoa meistä</a>
+          <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
+          <a class="btn" href="#yhteiso">Yhteisö & tapahtumat</a>
+        </nav>
       </div>
-
     </section>
 
-    <section class="banner">
-
+    <section class="banner" aria-label="Kampanjakaruselli">
       <div class="carousel" id="carousel">
-
         <!-- BANNERS:START -->
         <a class="slide" href="#" data-editor-target="" style="position: relative;">
-
-          <img src="./assets/banner1.svg" alt="Tervetuloa Maskuun">
+          <img src="./assets/banner1.svg" alt="Tervetuloa Maskuun – ostokset ja palvelut lähelläsi">
         </a>
         <!-- BANNERS:END -->
       </div>
+    </section>
+
+    <!-- UUSI: Tietoa meistä -->
+    <section id="meista" class="about container">
+      <h2>Maskun Kauppakeskus – juuret Varsinais-Suomessa</h2>
+      <p>
+        Maskun Kauppakeskus on kasvanut osaksi <strong>Varsinais-Suomen</strong> arkea ja elinvoimaa. Meille
+        <strong>Masku</strong> ei ole vain sijainti kartalla, vaan yhteisö, jonka tarpeista ja tarinoista kasvaa
+        kauppakeskuksemme identiteetti. Vaalimme paikallista palvelua, mutkatonta asiointia ja lämminhenkistä
+        kohtaamista – tuttua turkulaismaakunnan otetta, jossa laatu ja luotettavuus kulkevat käsi kädessä.
+      </p>
+      <p>
+        Kauppakeskuksen valikoima rakentuu arjen peruspalveluista, hyvinvoinnista, kodista ja sujuvasta liikkumisesta.
+        Haluamme, että asiointi on helppoa: selkeät tilat, esteetön kulku ja ilmainen pysäköinti tekevät piipahduksesta
+        tai viikonloppukäynnistä vaivatonta.
+      </p>
+    </section>
+
+    <!-- UUSI: Juuritarina -->
+    <section class="heritage container">
+      <h2>Vahvat juuret, paikallinen ote</h2>
+      <p>
+        Masku tunnetaan historiastaan ja yrittäjähenkisyydestään. Sama henki näkyy kauppakeskuksemme toiminnassa:
+        suosimme paikallisia kumppanuuksia, tuemme alueen pienyrittäjiä ja tuomme esiin Varsinais-Suomen osaamista.
+        Yhteinen tavoitteemme on kasvattaa palveluita pitkäjänteisesti – kestävästi, lähellä ja ihmisiä kuunnellen.
+      </p>
+      <ul class="pill-list" aria-label="Arvot">
+        <li>Paikallisuus &amp; luotettavuus</li>
+        <li>Helppo arki &amp; sujuva asiointi</li>
+        <li>Kestävä kehitys &amp; pitkä yhteistyö</li>
+      </ul>
     </section>
 
     <section class="tenants container">
@@ -98,10 +154,51 @@
           <span class="tenant-name">Kotipizza</span>
         </a>
         <!-- TENANTS:END -->
-
-
       </div>
       <p><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></p>
+    </section>
+
+    <!-- UUSI: Sijainti ja saavutettavuus -->
+    <section id="sijainti" class="location container">
+      <h2>Sijainti & saapuminen Maskussa</h2>
+      <p>
+        Löydät meidät helposti <strong>Maskun</strong> keskustan tuntumasta. Saapuminen onnistuu sujuvasti sekä
+        <abbr title="Joukkoliikenne">julkisilla</abbr> että omalla autolla, ja pihaltamme löytyy reilusti
+        pysäköintipaikkoja. Alueella on selkeät jalankulku- ja pyöräreitit, ja tiloissamme on esteetön kulku.
+      </p>
+      <details>
+        <summary>Vinkit ensimmäiselle käynnille</summary>
+        <ul>
+          <li>Saavu ajoissa viikonloppuisin – tapahtumapäivinä piha voi täyttyä nopeasti.</li>
+          <li>Hyödynnä sisäänkäyntien läheisyydessä olevat lyhytaikaiset pysäköintiruudut nopeaan asiointiin.</li>
+          <li>Kysy info-pisteeltä paikalliset tärpit: kahvilat, ulkoilureitit ja perhekohteet Maskussa.</li>
+        </ul>
+      </details>
+    </section>
+
+    <!-- UUSI: Yhteisö ja tapahtumat -->
+    <section id="yhteiso" class="community container">
+      <h2>Yhteisön keskellä – tapahtumia Varsinais-Suomessa</h2>
+      <p>
+        Järjestämme pitkin vuotta paikallisia tempauksia, kausimyyjäisiä ja perhetapahtumia. Tavoitteemme on tuoda
+        yhteen maskulaiset, lähialueiden asukkaat ja yrittäjät – rakentaa arkeen iloa ja hyötyä saman katon alle.
+      </p>
+      <div class="feature-cards">
+        <article class="card">
+          <h3>Paikalliset kumppanit</h3>
+          <p>Teemme yhteistyötä seurojen, yhdistysten ja yrittäjien kanssa. Jos sinulla on tapahtumaidea, tule
+            juttelemaan!</p>
+        </article>
+        <article class="card">
+          <h3>Kestävä arki</h3>
+          <p>Panostamme kierrätyspisteisiin ja energiatehokkuuteen. Pienillä teoilla rakennamme vastuullista tulevaisuutta
+            Maskussa.</p>
+        </article>
+        <article class="card">
+          <h3>Perheille</h3>
+          <p>Tilavat käytävät, lastenhoitotilat ja selkeät opasteet tekevät asioinnista huoletonta kaikenikäisille.</p>
+        </article>
+      </div>
     </section>
 
     <section class="hours container">
@@ -113,18 +210,74 @@
             <li>Ma–Pe: 10–20</li>
             <li>La: 10–18</li>
             <li>Su: 12–18</li>
-
             <!-- HOURS:END -->
+          </ul>
         </div>
+        <p class="muted">Huom. Yksittäisillä liikkeillä voi olla poikkeavat aukioloajat – tarkista liikkeen sivulta.</p>
       </div>
+    </section>
+
+    <!-- UUSI: Kutsu toimintaan -->
+    <section class="cta container" aria-label="Ota yhteyttä">
+      <h2>Tervetuloa asioimaan – tehdään arjesta sujuvaa</h2>
+      <p>Olitpa ohikulkumatkalla tai suunnittelemassa koko perheen retkeä, löydät kaiken tarvittavan Maskun
+        Kauppakeskuksesta. Tervetuloa osaksi paikallista tarinaa!</p>
+      <p>
+        <a class="btn" href="./liikkeet-ja-palvelut.html" aria-label="Tutustu kaikkiin liikkeisiin">
+          Tutustu liikkeisiin
+        </a>
+        <a class="btn btn-secondary" href="./yhteystiedot.html" aria-label="Yhteystiedot ja palaute">
+          Ota yhteyttä
+        </a>
+      </p>
     </section>
   </main>
 
   <footer id="site-footer" data-partial="./partials/footer.html"></footer>
 
+  <!-- Structured Data: ShoppingCenter -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ShoppingCenter",
+    "@id": "https://maskunkauppakeskus.fi/#shoppingcenter",
+    "name": "Maskun Kauppakeskus",
+    "url": "https://maskunkauppakeskus.fi/",
+    "description": "Paikallinen kauppakeskus Maskussa, Varsinais-Suomessa – liikkeet, palvelut ja tapahtumat.",
+    "image": "https://maskunkauppakeskus.fi/assets/og-image.jpg",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Masku",
+      "addressRegion": "Varsinais-Suomi",
+      "addressCountry": "FI"
+    },
+    "openingHoursSpecification": [
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"], "opens": "10:00", "closes": "20:00" },
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Saturday", "opens": "10:00", "closes": "18:00" },
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday", "opens": "12:00", "closes": "18:00" }
+    ],
+    "amenityFeature": [
+      { "@type": "LocationFeatureSpecification", "name": "Ilmainen pysäköinti", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Esteetön kulku", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Pyöräpaikat", "value": true }
+    ],
+    "areaServed": "Varsinais-Suomi"
+  }
+  </script>
+
+  <!-- Optional Breadcrumbs for SEO (päivitä polut sivustorakenteen mukaan) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Etusivu", "item": "https://maskunkauppakeskus.fi/" }
+    ]
+  }
+  </script>
+
+  <noscript>Parhaan käyttökokemuksen saat, kun JavaScript on käytössä.</noscript>
 
   <script src="./app.js" defer></script>
-
 </body>
-
 </html>
