Päivitetty asettelua, korjattua luettavuutta.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
         <nav class="quick-nav" aria-label="Pikavalikko">
+          <a class="btn" href="#hours">Aukioloajat</a>
+          <a class="btn" href="#tenants">Liikkeet & palvelut</a>
           <a class="btn" href="#meista">Tietoa meistä</a>
           <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
           <a class="btn" href="#yhteiso">Yhteisö & tapahtumat</a>
