--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -7,23 +7,8 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <a class="brand" href="./index.html" aria-label="Maskun Kauppakeskus">Masku</a>
-      <nav id="nav">
-        <!-- NAV:START -->
-<a href="./index.html" class="" data-editor-target="">Etusivu</a>
-        <a href="./liikkeet-ja-palvelut.html" data-editor-target="" class="active">Liikkeet &amp; palvelut</a>
-        <a href="./info-pysakointi.html" data-editor-target="">Pysäköinti</a>
-        <a href="./info-saapuminen.html" data-editor-target="">Saapuminen</a>
-        <a href="./info-yhteystiedot.html" data-editor-target="">Yhteystiedot</a>
-        <a href="./info-liiketilavuokraus.html" data-editor-target="">Liiketilavuokraus</a>
-        <div style="opacity: 0.6;">Lisää uusi osio</div>
-<!-- NAV:END -->
-        <button id="nav-toggle" aria-label="Valikko">☰</button>
-      </nav>
-    </div>
-  </header>
+  <header id="site-header" data-partial="./partials/header.html"></header>
+
 
   <main class="container">
     <h1>Liikkeet ja palvelut</h1>
