--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           data-name="Masku">
           <img src="./assets/logot/masku_logo.png" alt="Masku"
             onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-          <span class="tenant-name">Masku</span>
+          <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
         </a>
 
         <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
@@ -283,12 +283,12 @@
       <div class="content">
       <div class="container">
         <h2>Aukioloajat</h2>
-        <div id="hours">
+        <div id="">
           <!-- HOURS:START -->
           <ul class="hours-list" data-editor-target="" style="position: relative;">
-            <li>Ma–Pe: 10–20</li>
-            <li>La: 10–18</li>
-            <li>Su: 12–18</li>
+            <li><strong>Ma–Pe</strong>: 10–20</li>
+            <li><strong>La</strong>: 10–18</li>
+            <li><strong>Su</strong>: 12–18</li>
             <!-- HOURS:END -->
           </ul>
         </div>
