--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <header id="site-header" data-partial="./partials/header.html"></header>
 
   <main>
-    <section class="hero">
-      <div class="hero-container">
+    <section class="hero container">
+      <div class="content">
         <h1>Tervetuloa Maskun Kauppakeskukseen!</h1>
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
