--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
             <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
           </a>
 
-          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-kankaisten-kauppatie" target="_blank"
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank"
             rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
             <img src="./assets/logot/kotipizza_logo.png" alt="Kotipizza"
               onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Kotipizza Masku Riviera</span>
+            <span class="tenant-name">Kahvilaravintola Riviera & Kotipizza</span>
           </a>
           <!-- TENANTS:END -->
         </div>
-        <p><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></p>
+        <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></btns>
       </div>
     </section>
 
@@ -290,9 +290,9 @@
           <div id="">
             <!-- HOURS:START -->
             <ul class="hours-list" data-editor-target="" style="position: relative;">
-              <li><strong>Ma–Pe</strong>: 10–20</li>
-              <li><strong>La</strong>: 10–18</li>
-              <li><strong>Su</strong>: 12–18</li>
+              <li><strong>Ma–Pe</strong>: klo 10–20</li>
+              <li><strong>La</strong>: klo 10–18</li>
+              <li><strong>Su</strong>: klo 12–18</li>
               <!-- HOURS:END -->
             </ul>
           </div>
