--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <main>
     <section class="hero container">
       <div class="content">
-        <h1>Tervetuloa Maskun Kauppakeskukseen!</h1>
+        <h1>Tervetuloa Maskun Kauppa&shy;keskukseen!</h1>
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
         
@@ -71,7 +71,7 @@
     <!-- UUSI: Tietoa meistä -->
     <section id="meista" class="about container">
       <div class="content">
-        <h2>Maskun Kauppakeskus – juuret Varsinais-Suomessa</h2>
+        <h2>Maskun Kauppa&shy;keskus – juuret Varsinais-Suomessa</h2>
         <p>
           Maskun Kauppakeskus on kasvanut osaksi <strong>Varsinais-Suomen</strong> arkea ja elinvoimaa. Meille
           <strong>Masku</strong> ei ole vain sijainti kartalla, vaan yhteisö, jonka tarpeista ja tarinoista kasvaa
