--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
   <link rel="canonical" href="https://maskunkauppakeskus.fi/">
   <link rel="icon" href="./assets/favicon.ico">
+<link rel="preload" as="image" href="./assets/bg1.avif" fetchpriority="high">
+<link rel="preload" as="image" href="./assets/logo.avif" fetchpriority="high">
 
 
   <link rel="stylesheet" href="./styles.css" />
