Takaisin ylös -painike.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:locale" content="fi_FI">
   <meta property="og:title" content="Maskun Kauppakeskus – Varsinais-Suomen juurilla">
   <meta property="og:description"
-    content="Paikallinen kauppakeskus Maskussa, Varsinais-Suomessa. Liikkeet, palvelut ja tapahtumat – tervetuloa!">
+    content="Paikallinen kauppakeskus Maskussa. Liikkeet, palvelut ja tapahtumat – Tervetuloa!">
   <meta property="og:url" content="https://maskunkauppakeskus.fi/">
   <meta property="og:image" content="https://maskunkauppakeskus.fi/assets/og-image.jpg">
 
