--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-  <title>Maskun Kauppakeskus – Varsinais-Suomen juurilla | Liikkeet, palvelut & aukioloajat</title>
+  <title>Maskun Kauppakeskus</title>
   <meta name="description"
     content="Maskun Kauppakeskus on paikallinen kohtaamispaikka Varsinais-Suomessa. Tutustu liikkeisiin, palveluihin ja aukioloaikoihin – Maskun sydämessä, vahvoilla juurilla.">
   <meta name="robots" content="index,follow">
   <meta name="theme-color" content="#0b6b4b">
-
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" fetchpriority="high">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fi_FI">
@@ -28,10 +28,9 @@
   <meta name="twitter:image" content="https://maskunkauppakeskus.fi/assets/og-image.jpg">
 
   <link rel="canonical" href="https://maskunkauppakeskus.fi/">
-  <link rel="icon" href="./assets/favicon.ico">
-<link rel="preload" as="image" href="./assets/bg1.avif" fetchpriority="high">
-<link rel="preload" as="image" href="./assets/logo.avif" fetchpriority="high">
 
+  <link rel="preload" as="image" href="./assets/bg1.avif" fetchpriority="high">
+  <link rel="preload" as="image" href="./assets/logo.avif" fetchpriority="high">
 
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -48,18 +47,18 @@
         <h1>Tervetuloa Maskun Kauppa&shy;keskukseen!</h1>
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
-        
-          <div id="aukiolo-widget"></div>
+
+        <div id="aukiolo-widget"></div>
 
 
-          <nav class="quick-nav" aria-label="Pikavalikko">
-            <a class="btn" href="#hours">Aukioloajat</a>
-            <a class="btn" href="#tenants">Liikkeet & palvelut</a>
-            <a class="btn" href="#meista">Tietoa meistä</a>
-            <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
-            <a class="btn" href="#yhteiso">Yhteisö & tapahtumat</a>
-          </nav>
-        </div>
+        <nav class="quick-nav" aria-label="Pikavalikko">
+          <a class="btn" href="#hours">Aukioloajat</a>
+          <a class="btn" href="#tenants">Liikkeet & palvelut</a>
+          <a class="btn" href="#meista">Tietoa meistä</a>
+          <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
+          <a class="btn" href="#yhteiso">Yhteisö & tapahtumat</a>
+        </nav>
+      </div>
       </div>
     </section>
 
@@ -160,8 +159,8 @@
             <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
           </a>
 
-          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank"
-            rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
             <img src="./assets/logot/kotipizza_logo.avif" alt="Kotipizza"
               onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
             <span class="tenant-name">Kahvilaravintola Riviera & Kotipizza</span>
@@ -169,7 +168,7 @@
           <!-- TENANTS:END -->
         </div>
         <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></btns>
-      </div>
+        </div>
     </section>
 
     <!-- UUSI: Sijainti ja saavutettavuus -->
