--- a/index.html
+++ b/index.html
@@ -105,71 +105,64 @@
       </div>
     </section>
 
-    <section class="tenants container">
-      <div class="content">
-        <h2>Liikkeet ja palvelut</h2>
-        <div class="logo-grid" id="">
-          <!-- TENANTS:START -->
-          <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
-            aria-label="OmaSp Masku" data-name="OmaSp">
-            <img src="./assets/logot/omasp_logo.avif" alt="OmaSp"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">OmaSp</span>
-          </a>
+<section class="tenants container">
+  <div class="content">
+    <h2>Liikkeet ja palvelut</h2>
+    <div class="logo-grid" id="">
+      <!-- TENANTS:START -->
+      <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
+        aria-label="OmaSp Masku" data-name="OmaSp">
+        <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');"></span>
+        <span class="tenant-name">OmaSp</span>
+      </a>
 
-          <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
-            aria-label="Kiinteistö & Notariaatti Ahtinen" data-name="Ahtinen">
-            <img src="./assets/logot/ahtinen_logo.avif" alt="Kiinteistö & Notariaatti Ahtinen"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
-          </a>
+      <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
+        aria-label="Kiinteistö &amp; Notariaatti Ahtinen" data-name="Ahtinen">
+        <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');"></span>
+        <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
+      </a>
 
-          <a class="tenant" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
-            aria-label="Mimosan kukka" data-name="Mimosan kukka">
-            <img src="./assets/logot/mimosan_logo.avif" alt="Mimosan kukka"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Mimosan kukka</span>
-          </a>
+      <a class="tenant" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
+        aria-label="Mimosan kukka" data-name="Mimosan kukka">
+        <span class="logo" style="--logo:url('./assets/logot/mimosan_logo.avif');"></span>
+        <span class="tenant-name">Mimosan kukka</span>
+      </a>
 
-          <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
-            aria-label="Kauneushoitola Lunula" data-name="Lunula">
-            <img src="./assets/logot/lunula_logo.avif" alt="Kauneushoitola Lunula"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Kauneushoitola Lunula</span>
-          </a>
+      <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
+        aria-label="Kauneushoitola Lunula" data-name="Lunula">
+        <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');"></span>
+        <span class="tenant-name">Kauneushoitola Lunula</span>
+      </a>
 
-          <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
-            data-name="Masku">
-            <img src="./assets/logot/masku_logo.avif" alt="Masku"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
-          </a>
+      <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
+        data-name="Masku">
+        <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');"></span>
+        <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
+      </a>
 
-          <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
-            aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
-            <img src="./assets/logot/taksihietanen_logo.avif" alt="Taksi Hietanen"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Taksi Hietanen</span>
-          </a>
+      <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
+        aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
+        <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');"></span>
+        <span class="tenant-name">Taksi Hietanen</span>
+      </a>
 
-          <a class="tenant" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank"
-            rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" data-name="Aito-kauppa">
-            <img src="./assets/logot/aitokauppa_logo.avif" alt="Aito-kauppa Maskun Luontaispuoti"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
-          </a>
+      <a class="tenant" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank"
+        rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" data-name="Aito-kauppa">
+        <span class="logo" style="--logo:url('./assets/logot/aitokauppa_logo.avif');"></span>
+        <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
+      </a>
 
-          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
-            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
-            <img src="./assets/logot/kotipizza_logo.avif" alt="Kotipizza"
-              onerror="this.closest('.tenant').classList.add('missing'); this.remove();" />
-            <span class="tenant-name">Kahvilaravintola Riviera & Kotipizza</span>
-          </a>
-          <!-- TENANTS:END -->
-        </div>
-        <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></btns>
-        </div>
-    </section>
+      <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+        target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
+        <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
+        <span class="tenant-name">Kahvilaravintola Riviera &amp; Kotipizza</span>
+      </a>
+      <!-- TENANTS:END -->
+    </div>
+    <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></div>
+  </div>
+</section>
+
 
     <!-- UUSI: Sijainti ja saavutettavuus -->
     <section id="sijainti" class="location container">
