--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
     <section class="hero container">
       <div class="content">
-        <h1>Tervetuloa Maskun Kauppa&shy;keskukseen!</h1>
+        <h1>MASKUN KAUPPA&shy;KESKUS</h1>
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
 
